# RuView

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup-firewall.bat  start-real.bat  start-simulation.bat  start.bat
dashboard/: body-mesh.js  index.html  package-lock.json  package.json  skeleton3d.js  smpl-mesh.js  styles.css  vitals-hud.js  vite.config.js
docs/: REAL_HARDWARE_GUIDE.md
firmware/: README.md
models/: training_history.json
server/: __main__.py  api.py  benchmark.py  calibration.py  camera_cli.py  camera_collector.py  config.py  csi_frame.py  csi_receiver.py  data_generator.py  dataset.py  dataset_download.py  fall_detector.py  firmware_builder.py  fitness_tracker.py  notifier.py  pipeline.py  pose_model.py  real_collector.py  signal_processor.py  storage.py  train.py  vital_signs.py  wifi_detect.py
tests/: conftest.py  test_api.py  test_calibration.py  test_camera_collector.py  test_config.py  test_csi_frame.py  test_csi_receiver.py  test_data_generator.py  test_dataset.py  test_event_emitter.py  test_expert_config.py  test_expert_doctor.py  test_expert_field_tech.py  test_expert_hardware.py  test_expert_nurse.py  test_expert_uiux.py  test_fall_detector.py  test_fitness_tracker.py  test_integration_e2e.py  test_notifier.py  test_pipeline.py  test_pipeline_service.py  test_pose_model.py  test_protocol_envelope.py  test_protocol_handlers.py  test_protocol_v0_adapter.py  test_quick_setup.py  test_signal_processor.py  test_storage.py  test_storage_service.py  test_tour_seedy.py  (+7 more)
(+117 files in other folders)
