[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-body"
version = "0.1.0"
description = "WiFi CSI-based human pose estimation"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
